docs/envoy/v1.13.0/_sources/api-v2/config/grpc_credential/v2alpha/file_based_metadata.proto.rst.txt
.. _envoy_api_file_envoy/config/grpc_credential/v2alpha/file_based_metadata.proto:

Grpc Credentials File Based Metadata
====================================

.. _extension_envoy.grpc_credentials.file_based_metadata:


This extension may be referenced by the qualified name *envoy.grpc_credentials.file_based_metadata*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension does not operate on the data plane and hence is intended to be robust against untrusted traffic.

Configuration for File Based Metadata Grpc Credentials Plugin

.. _envoy_api_msg_config.grpc_credential.v2alpha.FileBasedMetadataConfig:

config.grpc_credential.v2alpha.FileBasedMetadataConfig
------------------------------------------------------

`[config.grpc_credential.v2alpha.FileBasedMetadataConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/grpc_credential/v2alpha/file_based_metadata.proto#L16>`_


.. code-block:: json

  {
    "secret_data": "{...}",
    "header_key": "...",
    "header_prefix": "..."
  }

.. _envoy_api_field_config.grpc_credential.v2alpha.FileBasedMetadataConfig.secret_data:

secret_data
  (:ref:`core.DataSource <envoy_api_msg_core.DataSource>`) Location or inline data of secret to use for authentication of the Google gRPC connection
  this secret will be attached to a header of the gRPC connection
  
  
.. _envoy_api_field_config.grpc_credential.v2alpha.FileBasedMetadataConfig.header_key:

header_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Metadata header key to use for sending the secret data
  if no header key is set, "authorization" header will be used
  
  
.. _envoy_api_field_config.grpc_credential.v2alpha.FileBasedMetadataConfig.header_prefix:

header_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Prefix to prepend to the secret in the metadata header
  if no prefix is set, the default is to use no prefix
  
  

